TYI ticket - 34 done and alignments fixed

--- a/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
+++ b/src/Views/StaticSite/Components/EnrollmentForm/formstyles.scss
@@ -1945,3 +1945,60 @@ input[type='radio']:checked::before {
 .react-datepicker__current-year {
   font-size: 1.8rem !important; /* Adjust the font size as needed */
 }
+
+.check_course_new {
+  width: 100%;
+}
+
+.date_enroll_btn {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 2rem;
+}
+
+.date_enroll_btn_txt {
+  width: 168px;
+  height: 44px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 8px;
+  background-color: #CA4625;
+  padding: 12px 16px;
+  border: none;
+}
+
+.date_info {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.style_dates {
+  font-size: 14px;
+  font-weight: 500;
+  color: rgba(0, 0, 0, 0.5);
+  margin-left: 8px;
+}
+
+.wrapper_center {
+  // display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  height: 100%;
+}
+
+.item_desc {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  // justify-content: center;
+}
+
+.item_date {
+  flex-direction: column !important;
+  padding: 10px 16px !important;
+  gap: 4px !important;
+}
