--- a/src/Views/StaticSite/Components/TermsandCondition/style.scss
+++ b/src/Views/StaticSite/Components/TermsandCondition/style.scss
@@ -53,3 +53,7 @@
     
   }
 }
+
+.ReactModalPortal .ReactModal__Overlay {
+  background-color: rgba(0, 0, 0, 0.5) !important;
+}
